[package]
name = "cue-display"
version = "0.1.0"
authors = ["Carsten Koester <ckoester@cisco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "~0.4"
regex = "1"
lazy_static = "1.4.0"
speedy2d = "1.0"
configparser = "3.0.0"
